[package]
name = "ytmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
dotenvy = "0.15.7"
env_logger = "0.10.0"
google-youtube3 = "5.0.2"
hyper = "0.14.25"
hyper-rustls = "0.23.2"
log = "0.4.17"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
