[package]
name = "ytmod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
dotenvy = "0.15.7"
env_logger = "0.10.0"
google-youtube3 = "5.0.2"
hyper = "0.14.26"
hyper-rustls = "0.24.0"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
urlencoding = "2.1.2"
