[package]
name = "ytmod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
dotenvy = "0.15.7"
env_logger = "0.10.0"
google-youtube3 = "5.0.3+20230123"
hyper = "0.14.27"
hyper-rustls = "0.24.1"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
urlencoding = "2.1.3"
